@@ -1,7 +1,7 @@
 #  File src/library/base/R/serialize.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2023 The R Core Team
+#  Copyright (C) 1995-2024 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -22,7 +22,7 @@ saveRDS <-
 {
     if(is.character(file)) {
         if(length(file) != 1 || file == "")
-            stop(gettextf("'%s' must be a non-empty string", "file"), domain = NA)
+            stop(gettextf("'%s' must be a non-empty character string", "file"), domain = NA)
 	object <- object # do not create corrupt file if object does not exist
 	mode <- if(ascii %in% FALSE) "wb" else "w"
 	con <- if (is.logical(compress))
